--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <module>stockserialization</module>
         <module>stringintern</module>
         <module>uncontendedsync</module>
+        <module>performancetestmethod</module>
+        <module>bigdecimal</module>
     </modules>
 
     <dependencyManagement>
@@ -177,7 +179,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>3.8.1</version>
+                <version>4.12</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
